# etlproject

./: .env_example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  azure-pipelines.yml  docker-compose.yaml  pyproject.toml
docs/: USAGE_GUIDE.md  analisis_fuentes_y_datos.md  estado_fase_final.md  prefect_ready_blueprint.md  prefect_ready_justificacion.md  situacion_actual.md
docs/adr/: refactor_2025-11-09.md
docs/prompts/: refactor_instructions.md
docs/prompts/roles/: role_general_orchestrator.md
docs/session_logs/: 2025-12-09_fix_fastapi_and_runtime_bugs.md
docs/standards/: 01_session_summary.md
k8s/: definition.yaml
prefect_flows/: __init__.py  main_flow.py
src/: maestroestandargenetica_202510160912_pollos.csv  maestroestandargenetica_202510161619_cerdos.csv  main.py  requirements.txt  std.csv
src/app/config/: __init__.py  config.py  logger.py
src/app/db/: __init__.py
src/app/db/sql/: __init__.py  database.py  queries.py
src/app/models/: __init__.py  animal_weights.py  breedings.py  conversion.py  entities.py  food_consumptions.py  mortality.py
src/app/routers/: __init__.py  conversion.py
src/app/schemas/: __init__.py  conversion.py  polars.py
src/app/services/: __init__.py  conversion.py
src/app/utilities/: __init__.py  get_data.py  timers.py
src/core/: __init__.py
src/core/extractors/: __init__.py  conversion.py
src/core/loaders/: __init__.py  conversion.py
src/core/transformers/: __init__.py  conversion.py
