[project]
dependencies = [
  "fastapi>=0.119.0",
  "pip>=25.2",
  "polars>=1.34.0",
  "prefect>=3.0.0",
  "psycopg2-binary>=2.9.11",
  "redis>=6.4.0",
  "sqlalchemy>=2.0.44",
  "sqlmodel>=0.0.27",
  "uvicorn>=0.37.0"
]
description = "Conversion para M1"
name = "msw-conversion-m"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[tool.autoflake]
expand-star-imports = true
ignore-init-module-imports = true
in-place = true
recursive = true
remove-all-unused-imports = true
remove-unused-variables = true

[tool.black]
exclude = ".git/,.venv/,.vscode/,logs/,__pycache__,*.md,Dockerfile"
line-length = 100
preview = true
target-version = ["py312"]

[tool.isort]
extend_skip = [".md"]
import_heading_firstparty = "Project"
import_heading_localfolder = "Local"
import_heading_stdlib = "Standard Library"
import_heading_thirdparty = "External"
line_length = 100
lines_after_imports = 2
multi_line_output = 3
profile = "black"
skip = [".git/", ".venv/", ".vscode/", "logs/", "__pycache__", "Dockerfile"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.uv]
dev-dependencies = [
  "pre-commit>=4.3.0"
]
